--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -21,6 +21,6 @@ common: &common
 # These are then relied on to have stable names by other things, so once named, please beware renaming has consequences.
 
 steps:
-  - label: "Example step"
-    command: "echo 'Hello, world!'"
+  - label: "build-test"
+    command: "bash -c ./ci/build-test.sh"
     <<: *common
