--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,12 @@ trim_trailing_whitespace = true
 indent_style = space
 max_line_length = 120
 
+[*.bat]
+end_of_line = crlf
+
+[*.cmd]
+end_of_line = crlf
+
 [*.cs]
 indent_size = 4
 
