--- a/.buildkite/premerge.definition.yaml
+++ b/.buildkite/premerge.definition.yaml
@@ -2,10 +2,12 @@ agent_queue_id: "v-81e791d9b1a186e5-------1531323149"
 description: spatialos/UnityGDK
 github:
   branch_configuration:
-  - buildkite
+  - master
+  - buildkite/*
   default_branch: master
   pull_request_branch_filter_configuration:
-  - buildkite
+  - master
+  - buildkite/*
 teams:
 - name: spatialos/develop/unity
   permission: MANAGE_BUILD_AND_READ
