harvest to artifacts

--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -23,4 +23,6 @@ common: &common
 steps:
   - label: "build-test"
     command: "ci\\build-test.cmd"
+    artifact_paths:
+      - "logs/**/*"
     <<: *common
